--- a/LNFreezerAPI/Properties/launchSettings.json
+++ b/LNFreezerAPI/Properties/launchSettings.json
@@ -14,8 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7281;http://localhost:5047",
-      "environmentVariables": {
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",      "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
